--- a/home-select.html
+++ b/home-select.html
@@ -116,10 +116,10 @@
               </div>
               <div class="col d-flex flex-column align-items-center">
                   <h4 class="name-item">Coffee Latte</h4>
-                  <div class="btn-input d-flex no-gutters border">
-                    <div class="col border-right min">-</div>
-                    <div class="col control-form">0</div>
-                    <div class="col border-left max">+</div>
+                  <div class="btn-input d-flex justify-content-center">
+                    <div class="control-min px-2">-</div>
+                    <div class="control-num px-2">0</div>
+                    <div class="control-max px-2">+</div>
                   </div>
               </div>
               <div class="col align-self-end">
@@ -134,10 +134,10 @@
               </div>
               <div class="col d-flex flex-column align-items-center">
                   <h4 class="name-item">Black Forest</h4>
-                  <div class="btn-input d-flex no-gutters border">
-                    <div class="col border-right min">-</div>
-                    <div class="col control-form">0</div>
-                    <div class="col border-left max">+</div>
+                  <div class="btn-input d-flex justify-content-center">
+                    <div class="control-min px-2">-</div>
+                    <div class="control-num px-2">0</div>
+                    <div class="control-max px-2">+</div>
                   </div>
               </div>
               <div class="col align-self-end">
@@ -152,10 +152,10 @@
               </div>
               <div class="col d-flex flex-column align-items-center">
                   <h4 class="name-item">Salmon Trufle</h4>
-                  <div class="btn-input d-flex no-gutters border">
-                    <div class="col border-right min">-</div>
-                    <div class="col control-form">0</div>
-                    <div class="col border-left max">+</div>
+                  <div class="btn-input d-flex justify-content-center">
+                    <div class="control-min px-2">-</div>
+                    <div class="control-num px-2">0</div>
+                    <div class="control-max px-2">+</div>
                   </div>
               </div>
               <div class="col align-self-end">
