Fundamental HTML, CSS, Javascript

--- a/history.html
+++ b/history.html
@@ -88,7 +88,7 @@
                                   </select>
                             </div>
                         </div>
-                        <canvas id="chart"></canvas>
+                        <canvas style="height: 250px;" id="chart"></canvas>
                     </div>
                 </div>
                 <div class="col">
